--- a/Rapport/figures/FletcherMunson.tex
+++ b/Rapport/figures/FletcherMunson.tex
@@ -30,7 +30,7 @@ ylabel={Sound Pressure Level [$\text{dB}_{\text{SPL}}$]},
 xlabel={Frequency [Hz]},
 axis background/.style={fill=white}
 ]
-\addplot [color=blue,solid,forget plot]
+\addplot [color=black,solid,forget plot]
   table[row sep=crcr]{%
 20	76.5517383226041\\
 25	65.6188759741168\\
@@ -62,7 +62,7 @@ axis background/.style={fill=white}
 10000	10.4756869143707\\
 12500	8.38134268048196\\
 };
-\addplot [color=blue,solid,forget plot]
+\addplot [color=black,solid,forget plot]
   table[row sep=crcr]{%
 20	83.750025182093\\
 25	75.7579476174299\\
@@ -94,7 +94,7 @@ axis background/.style={fill=white}
 10000	23.4306375311977\\
 12500	22.3269179096727\\
 };
-\addplot [color=blue,solid,forget plot]
+\addplot [color=black,solid,forget plot]
   table[row sep=crcr]{%
 20	89.57808305545\\
 25	82.6513213354879\\
@@ -126,7 +126,7 @@ axis background/.style={fill=white}
 10000	34.4255563813946\\
 12500	33.0444150871593\\
 };
-\addplot [color=blue,solid,forget plot]
+\addplot [color=black,solid,forget plot]
   table[row sep=crcr]{%
 20	94.8496368966944\\
 25	88.5219041380507\\
@@ -158,7 +158,7 @@ axis background/.style={fill=white}
 10000	44.5662466148994\\
 12500	42.547919719576\\
 };
-\addplot [color=blue,solid,forget plot]
+\addplot [color=black,solid,forget plot]
   table[row sep=crcr]{%
 20	99.8539233392895\\
 25	93.944411435575\\
@@ -190,7 +190,7 @@ axis background/.style={fill=white}
 10000	54.2841302509476\\
 12500	51.485907193908\\
 };
-\addplot [color=blue,solid,forget plot]
+\addplot [color=black,solid,forget plot]
   table[row sep=crcr]{%
 20	104.719829018815\\
 25	99.1446295914627\\
@@ -222,7 +222,7 @@ axis background/.style={fill=white}
 10000	63.779824548619\\
 12500	60.1353379120974\\
 };
-\addplot [color=blue,solid,forget plot]
+\addplot [color=black,solid,forget plot]
   table[row sep=crcr]{%
 20	109.511322266919\\
 25	104.227897844122\\
@@ -254,7 +254,7 @@ axis background/.style={fill=white}
 10000	73.1551040106779\\
 12500	68.6307704505211\\
 };
-\addplot [color=blue,solid,forget plot]
+\addplot [color=black,solid,forget plot]
   table[row sep=crcr]{%
 20	114.261989379846\\
 25	109.247746837385\\
@@ -286,7 +286,7 @@ axis background/.style={fill=white}
 10000	82.4640385160455\\
 12500	77.0420555813957\\
 };
-\addplot [color=blue,solid,forget plot]
+\addplot [color=black,solid,forget plot]
   table[row sep=crcr]{%
 20	118.990010884022\\
 25	114.23264214656\\
@@ -318,7 +318,7 @@ axis background/.style={fill=white}
 10000	91.7360867537153\\
 12500	85.4067696355526\\
 };
-\addplot [color=blue,solid,forget plot]
+\addplot [color=black,solid,forget plot]
   table[row sep=crcr]{%
 20	123.705395027303\\
 25	119.198100457884\\
@@ -350,7 +350,7 @@ axis background/.style={fill=white}
 10000	100.987523983214\\
 12500	93.7455269359469\\
 };
-\addplot [color=blue,solid,forget plot]
+\addplot [color=black,solid,forget plot]
   table[row sep=crcr]{%
 20	76.5517383226041\\
 25	65.6188759741168\\
@@ -382,7 +382,7 @@ axis background/.style={fill=white}
 10000	10.4756869143707\\
 12500	8.38134268048196\\
 };
-\addplot [color=blue,solid,forget plot]
+\addplot [color=black,solid,forget plot]
   table[row sep=crcr]{%
 20	83.750025182093\\
 25	75.7579476174299\\
@@ -414,7 +414,7 @@ axis background/.style={fill=white}
 10000	23.4306375311977\\
 12500	22.3269179096727\\
 };
-\addplot [color=blue,solid,forget plot]
+\addplot [color=black,solid,forget plot]
   table[row sep=crcr]{%
 20	89.57808305545\\
 25	82.6513213354879\\
@@ -446,7 +446,7 @@ axis background/.style={fill=white}
 10000	34.4255563813946\\
 12500	33.0444150871593\\
 };
-\addplot [color=blue,solid,forget plot]
+\addplot [color=black,solid,forget plot]
   table[row sep=crcr]{%
 20	94.8496368966944\\
 25	88.5219041380507\\
@@ -478,7 +478,7 @@ axis background/.style={fill=white}
 10000	44.5662466148994\\
 12500	42.547919719576\\
 };
-\addplot [color=blue,solid,forget plot]
+\addplot [color=black,solid,forget plot]
   table[row sep=crcr]{%
 20	99.8539233392895\\
 25	93.944411435575\\
@@ -510,7 +510,7 @@ axis background/.style={fill=white}
 10000	54.2841302509476\\
 12500	51.485907193908\\
 };
-\addplot [color=blue,solid,forget plot]
+\addplot [color=black,solid,forget plot]
   table[row sep=crcr]{%
 20	104.719829018815\\
 25	99.1446295914627\\
@@ -542,7 +542,7 @@ axis background/.style={fill=white}
 10000	63.779824548619\\
 12500	60.1353379120974\\
 };
-\addplot [color=blue,solid,forget plot]
+\addplot [color=black,solid,forget plot]
   table[row sep=crcr]{%
 20	109.511322266919\\
 25	104.227897844122\\
@@ -574,7 +574,7 @@ axis background/.style={fill=white}
 10000	73.1551040106779\\
 12500	68.6307704505211\\
 };
-\addplot [color=blue,solid,forget plot]
+\addplot [color=black,solid,forget plot]
   table[row sep=crcr]{%
 20	114.261989379846\\
 25	109.247746837385\\
@@ -606,7 +606,7 @@ axis background/.style={fill=white}
 10000	82.4640385160455\\
 12500	77.0420555813957\\
 };
-\addplot [color=blue,solid,forget plot]
+\addplot [color=black,solid,forget plot]
   table[row sep=crcr]{%
 20	118.990010884022\\
 25	114.23264214656\\
@@ -638,7 +638,7 @@ axis background/.style={fill=white}
 10000	91.7360867537153\\
 12500	85.4067696355526\\
 };
-\addplot [color=blue,solid,forget plot]
+\addplot [color=black,solid,forget plot]
   table[row sep=crcr]{%
 20	123.705395027303\\
 25	119.198100457884\\
