nye filer dali test skrevet

--- a/Rapport/1Chapters/1Preanalysis/Problemanalysis.tex
+++ b/Rapport/1Chapters/1Preanalysis/Problemanalysis.tex
@@ -1,16 +1,8 @@
 \chapter{Problem Analysis}
 
-This section will enlighten the problems concerning manipulation of sound. How is sound perceived, what is heard as warm sound and what is heard as distortion. Furthermore what kinds of situations concerning what creates the distortion in a loudspeaker. 
+This chapter will enlighten the problems concerning distortion in a loudspeaker and what creates distortion. How is sound perceived, what is heard as warm sound and what is heard as distortion. 
 
-\section{Test of DALI speaker}
-
-Describe where is goes wrong in the DALI speaker.
-
-\begin{itemize}
-\item What frequencies 
-\item Where in the enclosure
-\end{itemize}
-
+\input{1Chapters/1Preanalysis/Loudspeaker_test.tex}
 
 \input{1Chapters/1Preanalysis/audioClipping.tex}
 
