--- a/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_DSP.tex
+++ b/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_DSP.tex
@@ -47,10 +47,7 @@ For the choice of processor platform different types of platforms could be used,
 \end{table}
 
 
-Because filtering is needed in an equalizer and the high performance demands from above the natural choice of platform would be a \gls{DSP}. An asic chip would not be viable as a prototype platform because it does not have any flexibility. The FPGA lacks flexibility, has an increased design time and is not good at signal processing. The microcontroller has       
-
-
-a microcontroller and a \gls{DSP} is that the \gls{DSP} is designed for fast calculating and moving data while the microcontroller is designed to be more flexible in its use and have more features.
+Because filtering is needed in an equalizer and the high performance demands from above the natural choice of platform would be a \gls{DSP}. An asic chip would not be viable as a prototype platform because it does not have any flexibility. The FPGA lacks flexibility, has an increased design time and is not good at signal processing. The microcontroller has less performance than a \gls{DSP}, cost more and normally has a bigger power consumption than a \gls{DSP} so as stated before a \gls{DSP} is the choice of platform.     
 
 
 
