--- a/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_Interface.tex
+++ b/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_Interface.tex
@@ -28,7 +28,7 @@ This leads to a suggestions for a user interface which gives full control to a d
 \label{fig:Dev_sug}
 \end{figure}
 
-The suggestion on \autoref{fig:Dev_sug} has push buttons on the bands so they can be toggled on and of while the center frequency, gain and Q - value for each band can be changed with the use of knobs. 
+The suggestion on \autoref{fig:Dev_sug} has push buttons on the bands so they can be toggled on and of while the center frequency, gain and Q - value for each band can be changed with the use of knobs. The suggestion will be accompanied by a big screen where the frequency response of the equalizer can be seen. 
 
 \subsection*{User interface for the commercial user}
 The commercial user is the user which knows the implication of different the different settings of an equalizer but does not know anything about the technical aspect of an equalizer. This means that the interface needs to be simple and show what implpication a setting has on a system but leave out all technical aspects. 
