--- a/Rapport/main.tex
+++ b/Rapport/main.tex
@@ -128,12 +128,12 @@
 \fancyhead[RE,LO]{}
  \titleformat{\section}[hang]{\Large\bfseries}{\thesection\hsp\textcolor{black}{|}\hsp}{0pt}{\Large\bfseries}
 
- \renewcommand{\thesection}{\Alph{section}}
- \setcounter{section}{0}
+% \renewcommand{\thesection}{\Alph{section}}
+% \setcounter{section}{0}
  \part{Appendix}
  \appendix
 % \addcontentsline{toc}{chapter}{Appendix}
-\include{2Appendix/Appendix}
+\include{2Appendix/AppendixMAIN}
 
 
 \end{document}
