--- a/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_Equalizer.tex
+++ b/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_Equalizer.tex
@@ -43,6 +43,12 @@ An alternative to the graphic equalizer is the parametric equalizer. The paramet
 \label{fig:parametric_equalizer}
 \end{figure}
 
+Another advantages of implementing a parametric equalizer is that any band can be realized as a second order filter. 
+
+A disadvantages is if the user is not experienced with using a parametric equalizer, it can be difficult to review if the equalizer has the desired frequency response. The parametric equalizer may be flexible but should be interfaced to a display, so the user can see the response of the equalizer.
+
+
+
 
 \begin{figure}[H]
 \centering
