--- a/Rapport/1Chapters/1Preanalysis/Amplifier.tex
+++ b/Rapport/1Chapters/1Preanalysis/Amplifier.tex
@@ -1,4 +1,6 @@
-\section{Audio clipping}
+\section{Amplifier topology}
+
+\subsection{Distortion from audio clipping}
 
 \begin{itemize}
 \item Describe where clipping goes wrong in the DALI speaker
