--- a/Rapport/1Chapters/1Preanalysis/Loudspeaker_test.tex
+++ b/Rapport/1Chapters/1Preanalysis/Loudspeaker_test.tex
@@ -1,4 +1,4 @@
-\section{Loudspeaker test}
+\section{Test of active loudspeaker}
 This section will go through a test of a loudspeaker to understand how vibrations in the loudspeaker affect the distortion of the loudspeaker.
 The loudspeaker which will be the basis for the test is the Zensor 5 (as seen on \autoref{fig:dali_zensor5}) given by DALI. A passive speaker has been choosen for the test because the amplifiers in DALI's active speakers are designed not to pressure the loudspeaker to its limits and beyond, and to be able to test how the vibrations affect distortion the loudspeaker must be tested to its limits and beyond.
 
