--- a/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
+++ b/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
@@ -1,14 +1,24 @@
 
 \input{1Chapters/1Preanalysis/Introduction.tex}
 
-\input{1Chapters/1Preanalysis/ProblemAnalysis.tex}
+%%%%%%%%%%%%%%%%%%%%%%%% Problem analyse %%%%%%%%%%%%%%%%%%%%%%%%
+\chapter{The Active Speaker and limitations}
 
+This chapter will enlighten the problems concerning distortion in a loudspeaker and what creates distortion. How is sound perceived, what is heard as warm sound and what is heard as distortion. 
 
+\input{1Chapters/1Preanalysis/Amplifier.tex}
+
+\input{1Chapters/1Preanalysis/Speaker.tex}
+
+\input{1Chapters/1Preanalysis/Loudspeaker_test.tex}
+
+\section{Problem Statement}
+
+Der er et stort problem
+%%%%%%%%%%%%%%%%%%%%%%%% Teknisk Analyse %%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Technical Analysis}
 
 \input{1Chapters/1Preanalysis/TechnicalAnalysis_Equalizer.tex}
-
-\input{1Chapters/1Preanalysis/TechnicalAnalysis_Limiter.tex}
 
 \input{1Chapters/1Preanalysis/TechnicalAnalysis_Sensor.tex}
 
