--- a/Rapport/1Chapters/1Preanalysis/Speaker.tex
+++ b/Rapport/1Chapters/1Preanalysis/Speaker.tex
@@ -1,9 +1,10 @@
-\section{Vibrations from enclosure and driver}
+\section{The Loudspeaker}
 
-\begin{itemize}
-\item Where does the vibrations start?
-\end{itemize}
+In order to understand where distortion could arrive from in a speaker it is necessary to understand the basic fundamentals and the topology of a loudspeaker. This section will consist of the basic topology and then glans over the topic of vibration induced in the speaker driver.
 
+\subsection{Loudspeaker topology}
+
+\subsection{Distortion from vibration}
 
 A common problem when designing loudspeakers is the vibrations from the enclosure. If the vibrations are strong, they will become audible and distort the overall sound. The sound radiation from the enclosure will become greater when the \gls{SPL} from the speaker increase. This problem is solved with different techniques but yield more or less the same outcome, which is stiffening of the enclosure. Some of the techniques for removing vibrations from the enclosure could be:
 \begin{itemize}
