--- a/Rapport/2Appendix/AppendixMAIN.tex
+++ b/Rapport/2Appendix/AppendixMAIN.tex
@@ -2,3 +2,12 @@
 \input{2Appendix/DALI}
 
 \input{2Appendix/SpeakerTEST}
+
+
+
+
+%% Et afsnit %%
+\chapter{Sound Perception}
+\input{2Appendix/SoundPerception.tex}
+\input{2Appendix/Distortion.tex}
+%% Et afsnit %%
