--- a/Rapport/2Appendix/SpeakerTEST.tex
+++ b/Rapport/2Appendix/SpeakerTEST.tex
@@ -46,8 +46,8 @@ Furthermore the speaker will be placed in the anechoic room to eliminate any ext
 \ra{1.3}
 \begin{tabular}{S[table-format=1]ccc} \toprule
     {Item} & {Description} & {AAU-no} \\ \bottomrule 
-    1      & YY  & XX   \\ 
-    2      & YY  & XX   \\ 
+    1      &  B\& K Accelerometer Type 4344  & 64659   \\ 
+    2      &  B\& K Accelerometer Type 4344  & 64660   \\ 
     3      & YY  & XX   \\
     4      & YY  & XX   \\ 
     5      & YY  & XX  \\ \bottomrule 
