Minor details added

--- a/Rapport/1Chapters/1Preanalysis/Speaker.tex
+++ b/Rapport/1Chapters/1Preanalysis/Speaker.tex
@@ -1,8 +1,7 @@
-\section{The Loudspeaker}
+\section{Loudspeaker topology}
 
 In order to understand where distortion could arrive from in a speaker it is necessary to understand the basic fundamentals and the topology of a loudspeaker. This section will consist of the basic topology and then glans over the topic of vibration induced in the speaker driver.
 
-\subsection{Loudspeaker topology}
 
 \subsection{Distortion from vibration}
 
