Change in speakerblock

--- a/Rapport/figures/SpeakerBlock.tex
+++ b/Rapport/figures/SpeakerBlock.tex
@@ -8,7 +8,8 @@
 
 %% Store Blokke %%
 \begin{pgfonlayer}{bg}
-\draw[thick, fill=black!20] ($(-1.50,1)+(Amplifier)$) -- ($(1.750,1)+(Driver)$) -- ($(1.750,-1.25)+(Driver)$) -- ($(-1.50,-1.25)+(Amplifier)$) -- ($(-1.50,1)+(Amplifier)$); {\textbf{Speaker Enclosure}};
+\draw[thick, fill=black!20] ($(-1.50,1)+(Amplifier)$) -- ($(1.750,1)+(Driver)$) -- ($(1.750,-1.25)+(Driver)$) -- ($(-1.50,-1.25)+(Amplifier)$) -- ($(-1.50,1)+(Amplifier)$); 
+\node (Speakertag) at ($(-.25,-1)+(Driver)$) {\textbf{Speaker Enclosure}};
 \end{pgfonlayer}
 
 %% Forbindelse %%
