--- a/Rapport/1Chapters/1Preanalysis/Amplifier.tex
+++ b/Rapport/1Chapters/1Preanalysis/Amplifier.tex
@@ -1,11 +1,7 @@
 \section{Amplifier topology}
+This section will describe the internal amplifier in a active loudspeaker and analyze how distortion is created in the amplifier.
 
-\subsection{Distortion from audio clipping}
-
-\begin{itemize}
-\item Describe where clipping goes wrong in the DALI speaker
-\end{itemize}
-
+The amplifier is the module which amplifies the input signal. There are several diffenrent classes of amplifiers for example class A, AB and D, these classes have different characteristics which gives them different advantages and disadvantages. The two main parameters for the performance of a amplifier is distortion and efficiency. There are several kinds of distortion in a amplifier, such as unlinearity in the components, cross over distortion and audio clipning.
 
 Audio clipping is a situation that occurs when the output signal has a greater signal level than the device is capable of producing. If the signal level is beyond the limitation of the device, the device will cut the signal to its maximum level. This type of clipping is called hard clipping and is often undesirable. In \autoref{fig:audioclipping} an example of how hard clipping affects a 1 kHz sinusoid with a peak amplitude of 1.5. The maximum output level of the device is simulated to be 1.
 
