--- a/Rapport/2Appendix/Distortion.tex
+++ b/Rapport/2Appendix/Distortion.tex
@@ -48,3 +48,37 @@ Generally speaking it is desirable to have even harmonics since they are perceiv
 \end{table}
 
 Looking at \autoref{fig:OddTHD} where a lot of odd harmonics have been introduced there are no direct connection. Should a odd harmonic be of equal magnitude to the fundamental a entirely  new tone will be introduced. This is usually not desirable, but can in certain musics genres still be the goal. This is why you can not directly say you want even or odd harmonics, but in most cases the goal is even harmonics if any.
+
+\subsection{Total Harmonic Distortion (THD)}
+
+A way to specify the total amount harmonic distortion created by a system is  the term Total Harmonic Distortion (THD). A common system that creates harmonic distortions when a signal is passed through, is an analog audio amplifier. Because of non-linearity in active analog components used in an amplifier such as a transistor, harmonics will always appear. THD is therefore a way to indirectly specify the total amount of non-linearity of the system. Although harmonic distortion may affect the audio undesirably, some amplifiers, such as a tube amplifier, creates desirable harmonic distortions when the amplifier is overloaded sometimes referred as "tube sound", where a strong 2nd harmonic is created. 
+
+The amount of THD is given in percentage. A low THD indicates a low amount of harmonic distortion while a high THD indicates the opposite. To determine the THD the definition of Harmonic Distortion (HD) is needed and is given as:
+
+\begin{equation}
+H\!D_n = \frac{v_n}{v_1} =\frac{A_n}{A_1}
+\end{equation}
+\begin{where}
+\va{$v_n$}{is the voltage of the nth harmonic distortion}{V}\\
+\va{$v_1$}{is the voltage of the fundamental frequency}{V}\\
+\va{$A_n$}{is the amplification of the nth harmonic distortion}{-}\\
+\va{$A_1$}{is the amplification of the fundamental frequency}{-}\\
+\end{where}
+
+To determine the THD i.e. the total amount of distortion following expression is used:
+
+\begin{equation}
+T\!H\!D = \sqrt{\sum_{n=2}^{\infty}H\!D_n^2} = \sqrt{\sum_{n=2}^{\infty}\frac{A_n^2}{A_1^2}}
+\end{equation}
+
+From the equation it is seen that THD is the ratio between the amplitude of fundamental frequency and the amplitude of all its even and uneven harmonics. Therefore a greater THD means that the ratio between the amplitude of the fundamental frequency and amplitude of the harmonics are smaller.
+
+
+
+
+
+
+
+
+
+
