--- a/Rapport/2Appendix/Distortion.tex
+++ b/Rapport/2Appendix/Distortion.tex
@@ -61,8 +61,8 @@ H\!D_n = \frac{v_n}{v_1} =\frac{A_n}{A_1}
 \begin{where}
 \va{$v_n$}{is the voltage of the nth harmonic distortion}{V}\\
 \va{$v_1$}{is the voltage of the fundamental frequency}{V}\\
-\va{$A_n$}{is the amplification of the nth harmonic distortion}{-}\\
-\va{$A_1$}{is the amplification of the fundamental frequency}{-}\\
+\va{$A_n$}{is the amplitude of the nth harmonic distortion}{-}\\
+\va{$A_1$}{is the amplitude of the fundamental frequency}{-}\\
 \end{where}
 
 To determine the THD i.e. the total amount of distortion following expression is used:
