--- a/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
+++ b/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
@@ -27,8 +27,14 @@ On this loudspeaker you are able to connect via cable or via Bluetooth and chang
 \input{1Chapters/1Preanalysis/Loudspeaker_test.tex}
 
 \section{Problem Statement}
+From the analysis above the following problem statement can be formulated
 
-Der er et stort problem
+\begin{center}
+\label{ProblemStatement}
+\textit{How can an electronic system be designed to absolve this crazy impossible problem}
+\end{center}
+tekst tekst testk
+Besides the problem stated above, DALI whishes to have incorporated a user controlled equalizer for the commerical user and the developer because the developer should be able to change the frequency response of the speaker and because the commercial user should be able to change the frequency response of the speaker dependent of what room the speaker is located in. 
 %%%%%%%%%%%%%%%%%%%%%%%% Teknisk Analyse %%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Technical Analysis}
 The concept for a solution is seen on \autoref{fig:Concept}. It shows a feedback system which filters or limits a signal based on the output of sensor located in the speaker. Besides the feedback system which should protect the speaker, a user should be able to use an equalizer to change the settings of the frequency response.  
