--- a/Rapport/2Appendix/Distortion.tex
+++ b/Rapport/2Appendix/Distortion.tex
@@ -51,7 +51,7 @@ Looking at \autoref{fig:OddTHD} where a lot of odd harmonics have been introduce
 
 \subsection{Total Harmonic Distortion (THD)}
 
-A way to specify the total amount harmonic distortion created by a system is  the term Total Harmonic Distortion (THD). A common system that creates harmonic distortions when a signal is passed through, is an analog audio amplifier. Because of non-linearity in active analog components used in an amplifier such as a transistor, harmonics will always appear. THD is therefore a way to indirectly specify the total amount of non-linearity of the system. Although harmonic distortion may affect the audio undesirably, some amplifiers, such as a tube amplifier, creates desirable harmonic distortions when the amplifier is overloaded sometimes referred as "tube sound", where a strong 2nd harmonic is created. 
+A way to specify the total amount harmonic distortion created by a system is  the term Total Harmonic Distortion (THD). A common system that creates harmonic distortions when a signal is passed through, is an analog audio amplifier. Because of non-linearity in active analog components used in an amplifier such as a transistor, harmonics will always appear. THD is therefore a way to indirectly specify the total amount of non-linearity of the system. Although harmonic distortion may affect the audio undesirably, some amplifiers, such as a tube amplifier, creates desirable harmonic distortions when the amplifier is overloaded sometimes referred as "tube sound", where a strong 2nd harmonic is present. 
 
 The amount of THD is given in percentage. A low THD indicates a low amount of harmonic distortion while a high THD indicates the opposite. To determine the THD the definition of Harmonic Distortion (HD) is needed and is given as:
 
